[gd_scene load_steps=4 format=3 uid="uid://dw7seqdgmj5vt"]

[ext_resource type="Script" uid="uid://bhkbd8tn77o6t" path="res://scripts/result.gd" id="1_aqgun"]
[ext_resource type="PackedScene" uid="uid://8a2fdi4n04kk" path="res://scenes/player_icon.tscn" id="2_gd8ac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqgun"]
bg_color = Color(0.176471, 0.176471, 0.196078, 1)
corner_radius_top_left = 20
corner_radius_bottom_right = 20

[node name="Result" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqgun")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Results "
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 76.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_constants/h_separation = 100
columns = 5

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -241.0
offset_top = -72.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_aqgun")
text = "Return to Home Screen"

[node name="PlayerIcon" parent="." instance=ExtResource("2_gd8ac")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -118.0
offset_right = 136.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinnerBox" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -158.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -72.0
offset_right = -3.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
